--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "digivito-jgm": "file:",
+    "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.3",
