--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.2.0"
-  }
+    "@testing-library/react": "^16.2.0",
+    "gh-pages": "^6.3.0"
+  },
+  "homepage": "https://developerdeepak.github.io/digivito-jgm/"
 }
